--- a/backend/.env
+++ b/backend/.env
@@ -1,19 +1,19 @@
-JWT_SECRET = "----  Secret key for JWT authentication ------ "
-ADMIN_EMAIL = "---- Admin email -----"
-ADMIN_PASSWORD =  "---- Admin password -----"
+JWT_SECRET = "greatstack"
+ADMIN_EMAIL = "frencheliteservice@gmail.com"
+ADMIN_PASSWORD = "frenchelite@30102004services"
 
-MONGODB_URI = "-- MongoDB connection URI -----"
-PORT = 4000
+MONGODB_URI = "mongodb+srv://vkcompany09:ImJRpHrUDT0OJ5Qb@cluster0.dsmzj.mongodb.net/FrenchEliteTemp1"
+PORT = 4000 
 
-CLOUDINARY_API_KEY =  "----- Cloudinary API key -------"
-CLOUDINARY_SECRET_KEY = "-- Cloudinary secret key -----"
-CLOUDINARY_NAME =  "---- Cloudinary cloud name -----"
+CLOUDINARY_API_KEY = "363791979932174"
+CLOUDINARY_SECRET_KEY = "chIc-ihRpM3Aierx-l-mozbP8mY"
+CLOUDINARY_NAME = "dnikkwyn3"
 
-STRIPE_SECRET_KEY = "-------- Paste Stripe Secret key 
+STRIPE_SECRET_KEY = "-------- Paste Stripe Secret key --------"
 
 RAZORPAY_KEY_SECRET = '-------- Paste Razorpay Secret key --------'
-RAZORPAY_KEY_ID = '-------- Paste Razorpay key Id --------' 
+RAZORPAY_KEY_ID = '-------- Paste Razorpay key Id --------'
 
-MAIL_HOST =  "--- Mail server host -------"
-MAIL_USER = "------ Mail server user (Gmail) ------"
-MAIL_PASS = "------ Mail server password ------ "
+MAIL_HOST = smtp.gmail.com 
+MAIL_USER = vkcompany09@gmail.com
+MAIL_PASS = zafhgdkcuhvgiwku
